--- a/task-06/Makefile
+++ b/task-06/Makefile
@@ -27,5 +27,6 @@ USEMODULE += auto_init_gnrc_netif
 USEMODULE += gnrc_ipv6_default
 USEMODULE += gnrc_icmpv6_echo
 USEMODULE += gnrc_conn_udp
+USEMODULE += gnrc_txtsnd
 
 include $(RIOTBASE)/Makefile.include
