--- a/task-06/Makefile
+++ b/task-06/Makefile
@@ -26,6 +26,6 @@ USEMODULE += gnrc_netdev_default
 USEMODULE += auto_init_gnrc_netif
 USEMODULE += gnrc_ipv6_default
 USEMODULE += gnrc_icmpv6_echo
-USEMODULE += gnrc_conn_udp
+USEMODULE += gnrc_sock_udp
 
 include $(RIOTBASE)/Makefile.include
