--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,13 @@ matrix:
   - name: "Build tutorials for phyWAVE-KW22"
     env: BOARD=pba-d-01-kw2x
 
+notifications:
+  email:
+    recipients:
+    - maintainers@riot-os.org
+    on_success: change
+    on_failure: always
+
 before_script:
   - export J="$(( $(grep -c ^processor /proc/cpuinfo) * 2 ))"
 
