--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ matrix:
 notifications:
   email:
     recipients:
-    - maintainers@riot-os.org
+    - maintainer@riot-os.org
     on_success: change
     on_failure: always
 
